<resources>

    //==============================================================================================
    // Application ...
    <string name="application_name">شركة أناة للحج والعمرة ذ.م.م</string>
    <string name="application_description">نظام المعتمرين</string>
    <string name="application_type">تطبيق المعتمرين</string>
    <string name="application_rights">كل حقوق التطبيق محفوظة شركة أناة للحج والعمرة ذ.م.م</string>
    <string name="application_theme">مظهر التطبيق</string>
    <string name="application_language">لغة التطبيق</string>

    //==============================================================================================
    // Developer ...
    <string name="dev_name">معاذ رائد أبو عودة</string>
    <string name="dev_nationality">فلسطيني</string>
    <string name="dev_email">fm.moath99@gmail.com</string>
    <string name="dev_mobile">00972597718418</string>

    //==============================================================================================
    // Owner ...
    <string name="owner_name">أحمد بن عبدالرحمن العقيل</string>
    <string name="owner_nationality">سعودي</string>
    <string name="owner_email">fm.moath99@gmail.com</string>

    //==============================================================================================
    // General ...
    <string name="user_name">إسم المستخدم</string>
    <string name="full_name">الإسم الكامل</string>
    <string name="nationality">الجنسية</string>
    <string name="visa_number">رقم التأشيرة</string>
    <string name="entry_number">رقم الدخولية</string>
    <string name="image_personal">صورتك الشخصية</string>
    <string name="user_image">صورة المستخدم</string>
    <string name="e_mail">البريد الإلكتروني</string>
    <string name="mobile">رقم الهاتف</string>
    <string name="city">المدينة</string>
    <string name="port">المنفذ</string>
    <string name="date">التاريخ</string>
    <string name="time">الوقت</string>
    <string name="accompanying">المحرم</string>
    <string name="mobile_number_inside_saudi_arabi">رقم هاتفك داخل المملكة العربية السعودية</string>
    <string name="mobile_number_in_home_country">رقم هاتفك الأساسي في بلدك</string>
    <string name="password">كلمة المرور</string>

    <string name="home">الرئيسية</string>
    <string name="profile">الملف الشخصي</string>
    <string name="contact_us">تواصل معنا</string>
    <string name="location">الموقع</string>
    <string name="notification">الإشعارات</string>
    <string name="setting">الإعدادات</string>

    <string name="get_started">بدء الإستخدام</string>
    <string name="welcome">أهلاً بك</string>

    <string name="skip">تخطي</string>

    <string name="edit">تعديل</string>

    <string name="there_is_no">لا يوجد</string>

    //==============================================================================================
    // On Boarding ...
    <string name="on_boarding_title_one">العنوان الاول</string>
    <string name="on_boarding_title_two">العنوان الثاني</string>
    <string name="on_boarding_title_three">العنوان الثالث</string>
    <string name="on_boarding_title_four">العنوان الرابع</string>
    <string name="on_boarding_title_five">العنوان الخامس</string>
    <string name="on_boarding_description_one">هنا يظهر تفاصيل بسيطة لا تتجاوز سطر واحد فقط للتعريف عن العنوان الأول</string>
    <string name="on_boarding_description_two">هنا يظهر تفاصيل بسيطة لا تتجاوز سطر واحد فقط للتعريف عن العنوان الثاني</string>
    <string name="on_boarding_description_three">هنا يظهر تفاصيل بسيطة لا تتجاوز سطر واحد فقط للتعريف عن العنوان الثالث</string>
    <string name="on_boarding_description_four">هنا يظهر تفاصيل بسيطة لا تتجاوز سطر واحد فقط للتعريف عن العنوان الرابع</string>
    <string name="on_boarding_description_five">هنا يظهر تفاصيل بسيطة لا تتجاوز سطر واحد فقط للتعريف عن العنوان الخامس</string>

    //==============================================================================================
    // Sign ...
    <string name="sign_in">تسجيل الدخول</string>
    <string name="passport_number">رقم جواز السفر</string>
    <string name="set_password">تعيين كلمة المرور</string>
    <string name="new_password">كلمة المرور الجديدة</string>
    <string name="forget_password">أرسل لي كلمة المرور</string>
    <string name="sign_in_description">قم بكتابة البيانات المطلوبة كما هي مطلوبة لتتمكن من الإستفادة من خدمات التطبيق</string>
    <string name="account_recovery_description">في حال واجهتك أي مشكلة إعرضها على الموظف المرافق لكم</string>

    //==============================================================================================
    // Home ...
    <string name="fragment_home_description">رقم كشف رحلتك 100 حيث أن رحلتك الآن  في مرحلة</string>
    <string name="fragment_home_level">الإستقبال في مطار الملك فهد الدولي</string>

    //==============================================================================================
    // Profile ...
    <string name="description_profile_secondary_data">هذه البيانات تساعدنا في تقديم خدمة أفضل وتمكننا من الوصول لكم بشكل أفضل ومن الأفضل لك ولنا إكمالها</string>

    //==============================================================================================
    // Contact Us ...
    <string name="fragment_contact_us_description">هذه المحادثة بينك وبين</string>
    <string name="fragment_contact_us_description_sec">مركز الدعم والتواصل في الشركة</string>
    <string name="message_text">نص الرسالة</string>

    //==============================================================================================
    // Location ...
    <string name="report_my_loss_to_the_company">إبلاغ الشركة عن ضياعي</string>
    <string name="fragment_location_description">في هذه الخريطة يظهر</string>
    <string name="fragment_location_description_sec">موقعك الحالي ومواقع أخرى قد تهمك</string>

    //==============================================================================================
    // Notification ...
    <string name="fragment_notification_description">مركز الإشعارات والتنبيهات</string>
    <string name="fragment_notification_description_sec">عدد الرسائل غير مقروءة : 5</string>

    //==============================================================================================
    // Trip ...
    <string name="trip_transporter">الناقل</string>
    <string name="trip_reservations">حجوزات الرحلة</string>
    <string name="trip_stage">مراحل الرحلة</string>
    <string name="trip_number">رقم الرحلة</string>
    <string name="view_all_trip_details">مشاهدة كافة تفاصيل الرحلة</string>
    <string name="work_statement_number">رقم كشف العمل</string>

    //==============================================================================================
    // Reservation ...
    <string name="reservations_type">نوع الحجز</string>
    <string name="reservations_place">مكان الحجز</string>
    <string name="reservations_period">مدة الحجز</string>

    //==============================================================================================
    // Stage ...
    <string name="stage_completed">مرحلة مكتملة</string>
    <string name="stage_underway">قيد التقدم</string>
    <string name="stage_did_not_start">لم تبدأ بعد</string>

    //==============================================================================================
    // Language ...
    <string name="ar">اللغة العربية</string>

    //==============================================================================================
    // Themes ...
    <string name="light_theme">الثيم الفاتح</string>

    //==============================================================================================
    // Ads ...
    <string name="ads_title">عنوان الزاوية الإعلانية</string>
    <string name="ads_description">تفاصيل الإعلان مثل نعلن عن توفر شاغر وظيفي للعمل في الشركة</string>
    <string name="ads_link">للمزيد إضغط هنا</string>

    //==============================================================================================
    // Errors ...
    <string name="error_empty">الرجاء التحقق من إدخال %1$s</string>
    <string name="error_incorrect">الرجاء التحقق من صحة %1$s</string>

    //==============================================================================================
    // More ...
    <string name="image">صورة</string>
    <string name="basic_data">البيانات الأساسية</string>
    <string name="secondary_data">البيانات الثانوية</string>
    <string name="skip_password">تخطي دون تغيير كلمة المرور</string>

</resources>