<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl"
        android:background="@color/white"
        tools:context=".views.activities.TripDetailsActivity">

        <LinearLayout
            android:id="@+id/trip_details_container_statement_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/shape_rectangle_corner_background_head_page"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/fragment_home_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work_statement_number"
                style="@style/Text_h6_r"
                android:gravity="center" />

            <TextView
                android:id="@+id/fragment_home_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2345"
                style="@style/Text_h6_m"
                android:textColor="@color/amber" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trip_details_container_statement_number"
            app:layout_constraintBottom_toTopOf="@+id/trip_details_trip_reservations">

            <com.davidmiguel.multistateswitch.MultiStateSwitch
                android:id="@+id/trip_details_switch"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                app:multistateswitch_disabled_text_size="@dimen/_10ssp"
                app:multistateswitch_selected_text_size="@dimen/_10ssp"
                app:multistateswitch_selected_background_color="@color/blue"
                app:multistateswitch_background_color="@color/back_ground_form"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_marginBottom="@dimen/_7sdp">

                <ImageView
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:src="@drawable/shape_oval_amber"
                    android:layout_gravity="center"
                    android:contentDescription="@string/image"
                    android:layout_marginEnd="@dimen/_10sdp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/trip_number"
                    style="@style/Text_h6_r" />

                <TextView
                    android:id="@+id/trip_details_trip_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1204"
                    style="@style/Text_h7_r"
                    android:textColor="@color/blue"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/back_ground_form"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_marginBottom="@dimen/_7sdp">

                <ImageView
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:src="@drawable/shape_oval_amber"
                    android:layout_gravity="center"
                    android:contentDescription="@string/image"
                    android:layout_marginEnd="@dimen/_10sdp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/trip_transporter"
                    style="@style/Text_h6_r" />

                <TextView
                    android:id="@+id/trip_details_trip_transporter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="الخطوط الجوية التركية"
                    style="@style/Text_h7_r"
                    android:textColor="@color/blue"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/back_ground_form"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_marginBottom="@dimen/_7sdp">

                <ImageView
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:src="@drawable/shape_oval_amber"
                    android:layout_gravity="center"
                    android:contentDescription="@string/image"
                    android:layout_marginEnd="@dimen/_10sdp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    style="@style/Text_h6_r" />

                <TextView
                    android:id="@+id/trip_details_trip_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="إسطنبول"
                    style="@style/Text_h7_r"
                    android:textColor="@color/blue"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/back_ground_form"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_marginBottom="@dimen/_7sdp">

                <ImageView
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:src="@drawable/shape_oval_amber"
                    android:layout_gravity="center"
                    android:contentDescription="@string/image"
                    android:layout_marginEnd="@dimen/_10sdp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/port"
                    style="@style/Text_h6_r" />

                <TextView
                    android:id="@+id/trip_details_trip_port"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="مطار الملك عبدالعزيز الدولي"
                    style="@style/Text_h7_r"
                    android:textColor="@color/blue"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/back_ground_form"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_marginBottom="@dimen/_7sdp">

                <ImageView
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:src="@drawable/shape_oval_amber"
                    android:layout_gravity="center"
                    android:contentDescription="@string/image"
                    android:layout_marginEnd="@dimen/_10sdp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    style="@style/Text_h6_r" />

                <TextView
                    android:id="@+id/trip_details_trip_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12-4-2022"
                    style="@style/Text_h7_r"
                    android:textColor="@color/blue"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/back_ground_form"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_marginBottom="@dimen/_7sdp">

                <ImageView
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:src="@drawable/shape_oval_amber"
                    android:layout_gravity="center"
                    android:contentDescription="@string/image"
                    android:layout_marginEnd="@dimen/_10sdp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    style="@style/Text_h6_r" />

                <TextView
                    android:id="@+id/trip_details_trip_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="11:40 مساءاً"
                    style="@style/Text_h7_r"
                    android:textColor="@color/blue"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/back_ground_form"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"/>

        </LinearLayout>

        <Button
            android:id="@+id/trip_details_trip_reservations"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            style="@style/Button_amber"
            android:text="@string/trip_reservations"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/trip_details_trip_stage" />

        <Button
            android:id="@+id/trip_details_trip_stage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            style="@style/Button_blue"
            android:text="@string/trip_stage"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>